# ros2-openarm-project

./: .gitignore  LICENSE  README.md  team_division_plan.md  workflow.md
calibration/: hand_eye_result.yaml  package.xml  setup.py
calibration/calibration/: minimal.py
docs/: ENVIRONMENT_README.md  MEMBER_C_INTEGRATION_COMPLETE.md  PROJECT_STRUCTURE.md  QUICK_START.md  RUN_GUIDE.md  run.txt
motion_control/: INSTALL_PYMOVEIT2.md  MEMBER_C_REPORT.md  QUICK_VERIFY.md  README.md  VERIFICATION_GUIDE.md  diagnose_executables.sh  package.xml  setup.py  verify_member_c.sh
motion_control/config/: planner_config.yaml
motion_control/launch/: bimanual_grasp.launch.py  grasp.launch.py
motion_control/motion_control/: bimanual_grasp_planner.py  grasp_planner.py  gripper_controller.py  minimal.py  moveit2_simple.py  statistics_analyzer.py  test_grasp.py
openarm_control/: CMakeLists.txt  package.xml
openarm_control/scripts/: arm_controller.py
openarm_description/urdf/robot/: openarm_robot.xacro
openarm_env_bringup/: package.xml  setup.cfg  setup.py
openarm_env_bringup/launch/: display_env.launch.py  mujoco_env.launch.py  mujoco_env_with_bridge.launch.py
openarm_env_bringup/openarm_env_bringup/: mujoco_ros_bridge.py  mujoco_xml_utils.py
openarm_env_bringup/rviz/: openarm_env.rviz
openarm_env_bringup/scripts/: view_mujoco_env.py
openarm_env_description/: CMakeLists.txt  package.xml
openarm_env_description/mujoco/: openarm_env.xml  openarm_env_static.xml
openarm_env_description/urdf/: apple.xacro  banana.xacro  camera_macro.xacro  openarm_with_env.xacro  table.xacro
openarm_moveit_config/: CMakeLists.txt  package.xml
openarm_moveit_config/config/: controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  planning_scene_monitor.yaml  sensors_3d.yaml  trajectory_execution.yaml
openarm_moveit_config/config/srdf/: openarm.srdf.xacro
openarm_moveit_config/launch/: demo.launch.py
openarm_ros2/openarm_bringup/: CMakeLists.txt  package.xml
openarm_ros2/openarm_bringup/launch/: openarm.bimanual.launch.py
perception/: object_detector.py  package.xml  setup.py
perception/perception/: minimal.py
system_bringup/: package.xml  setup.py
system_bringup/launch/: all_nodes.launch.py
