<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openarm_env_description</name>
  <version>0.0.1</version>
  <description>OpenArm environment description with table, fruits, and camera mount</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>xacro</exec_depend>
  <exec_depend>openarm_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
